# trustid-kyc-workflow

./: .gitignore  README.md  requirements.txt
backend/: README.md  kyc_cases.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/reports/: KYC-20250804-0965_report.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AuthCallback.tsx  BankLoginPage.tsx  CustomerDashboard.tsx  EmployeeDashboard.tsx  LoginPage.tsx
kycagents/: README.md  list_cloud_models.py  pyproject.toml  report.md  test_litellm_cloud.py  test_ollama_cloud.py  verify_ocr_tool.py
kycagents/src/kycagents/: crew.py  main.py
kycagents/src/kycagents/config/: agents.yaml  tasks.yaml
kycagents/src/kycagents/tools/: ocr_tool.py
