[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
google-cloud-aiplatform = "^1.106.0"
google-cloud-bigquery = "^3.35.1"
google-cloud-storage = "<3.0.0"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
pandas = "^2.3.1"
numpy = "^2.3.2"
pillow = "^11.3.0"
pypdf2 = "^3.0.1"
python-magic = "^0.4.27"
pytesseract = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
